--- a/app/assets/stylesheets/searches.scss
+++ b/app/assets/stylesheets/searches.scss
@@ -48,6 +48,6 @@ html {
   font-weight: 300;
 }
 .verbage{
-  font-family: 'Amaranth';
+  font-family: sans-serif;
 
 }
